<resources>
    <string name="app_name">Artleap</string>
    <string name="ChooseYourTemplate">Choose Your Template</string>
    <string name="load_picture">Load Picture</string>
    <string name="upload_photo">Continue</string>
    <string name="my_action_bar">Artleap</string>
    <string name="split_colors">Split Colors</string>
    <string name="split_colors_Title">"   Split Colors"</string>
    <string name="color_split_desc">"    See yourself in triple (or more!)"</string>
    <string name="filters_Title">"   Filters"</string>
    <string name="filters_desc">"    A tonal touch to change the mood"</string>
    <string name="KaleidoDrop_Title">"   KaleidoDrop"</string>
    <string name="Kaleido_desc">"    Kaleido the background behind any subject!"</string>
    <string name="Lensball_Title">"   Lensball"</string>
    <string name="Lensball_desc">"    Stand-out with stunning reflections."</string>
    <string name="color">color</string>
    <string name="spread">Spread</string>


</resources>