<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-10dp"
        android:paddingTop="20dp"
        android:paddingBottom="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/split_color"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="129dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:background="#201f24"
                android:fontFamily="serif"
                android:text="@string/split_colors_Title"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Compat.Notification"
                android:textColor="#b8b7bb"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/imageView13"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageView13"
                app:layout_constraintTop_toBottomOf="@+id/imageView13" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="-3dp"
                android:background="@drawable/rounded_corner_style"
                android:fontFamily="serif"
                android:text="@string/color_split_desc"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Compat.Notification"
                android:textColor="#b8b7bb"
                android:textSize="12dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="271dp"
                android:layout_height="270dp"
                android:layout_marginTop="44dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:srcCompat="@drawable/kaleido_drop"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:background="#201f24"
                android:fontFamily="serif"
                android:text="@string/KaleidoDrop_Title"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Compat.Notification"
                android:textColor="#b8b7bb"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/desc2"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="-3dp"
                android:background="@drawable/rounded_corner_style"
                android:fontFamily="serif"
                android:text="@string/Kaleido_desc"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Compat.Notification"
                android:textColor="#b8b7bb"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/title2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/title2"
                app:layout_constraintTop_toBottomOf="@+id/title2" />

            <ImageView
                android:id="@+id/lensImage"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_marginTop="44dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc2"
                app:srcCompat="@drawable/lensball"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:background="#201f24"
                android:fontFamily="serif"
                android:text="@string/Lensball_Title"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Compat.Notification"
                android:textColor="#b8b7bb"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/lensImage"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/lensImage"
                app:layout_constraintTop_toBottomOf="@+id/lensImage" />

            <TextView
                android:id="@+id/desc3"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="-3dp"
                android:background="@drawable/rounded_corner_style"
                android:fontFamily="serif"
                android:text="@string/Lensball_desc"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Compat.Notification"
                android:textColor="#b8b7bb"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/title3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/title3"
                app:layout_constraintTop_toBottomOf="@+id/title3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>